controlador para el selector actualizado

--- a/Gdard_ti22/.env
+++ b/Gdard_ti22/.env
@@ -12,8 +12,8 @@ DB_CONNECTION=sqlsrv
 DB_HOST=DESKTOP-OMTJ03I
 DB_PORT=1433
 DB_DATABASE=DBmod
-DB_USERNAME=seba
-DB_PASSWORD=1234
+DB_USERNAME=admin
+DB_PASSWORD=admin123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
